[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-usage"
version = "0.1.0"
description = "CLI for reading Codex usage limits from /status."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
codex-limit = "ai_usage.codex_limits:main"
